frontend/tests/cases/positive/synInstanceIntervalParameter.gr
interface Simple a (c : Interval Nat)

data A = A

-- An instance with an interval parameter
instance Simple A [0..1]
